# dynamic-int-and-dynamic-typing

./: CMakeLists.txt  README.md  main.cpp
types/headers/: DynamicInteger.hpp  Variable.hpp
types/libs/: DynamicInteger.cpp  Variable.cpp
